tests/outref/TSC00I.ref

-- TSC00I : select without a from with a syntax error

select * asdfasdfsdf;

LINE 3:1: select * asdfasdfsdf;
                   ^^^^^^^^^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
OCTO> select * asdfasdfsdf;
OCTO> 
